# rl-sales-augment

./: .gitignore  MANIFEST.in  PUBLISHING.md  PYPI_README.md  README.md  pyproject.toml  server.json
benchmarks/: README.md  plot_results.py  salesllm_results.json  salesllm_style_eval.py
examples/: fastapi_server.py  gemma_e2b.py  gemma_e4b.py  quickstart_mock.py  whatsapp_webhook.py  with_providers.py
src/rl_sales_augment/: __init__.py  _env.py  _models.py  _text.py  deploy.py  docs.py  gemma.py  mcp_server.py  policy.py  providers.py  retrieval.py  style.py  world.py
tests/: test_smoke.py
