[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-sales-augment"
version = "0.9.5"
description = "The decision layer frontier LLMs lack: an RL policy trained on outcomes decides WHEN to close; GPT/Gemini/Claude/Gemma write the words."
readme = "PYPI_README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Nandakishor M", email = "nandakishor@convaiinnovations.com" }]
maintainers = [{ name = "Convai Innovations Pvt. Ltd.", email = "nandakishor@convaiinnovations.com" }]
keywords = ["reinforcement-learning", "llm", "sales", "agent", "augmentation", "world-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core (serving) needs only numpy + torch, so it installs on every Python that torch supports.
dependencies = [
    "numpy>=1.21",
    "torch>=1.13",
]

[project.optional-dependencies]
gemini = ["google-genai>=2.0.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
gemma = ["transformers>=5.0", "pillow"]          # local Gemma 4 (transformers 5.x needs Python >=3.10)
mcp = ["mcp>=1.2"]                                # expose the policy as an MCP server (Python >=3.10)
api = ["fastapi>=0.110", "uvicorn"]               # REST serving (examples/fastapi_server.py)
docs = ["pypdf", "python-docx", "openpyxl"]       # build_company_ctx from PDF/DOCX/XLSX
all = ["google-genai>=2.0.0", "openai>=1.0", "anthropic>=0.30", "transformers>=5.0", "pillow", "mcp>=1.2", "fastapi>=0.110", "uvicorn", "pypdf", "python-docx", "openpyxl"]

[project.scripts]
rl-sales-augment-mcp = "rl_sales_augment.mcp_server:main"

[project.urls]
Homepage = "https://github.com/NandhaKishorM/rl-sales-augment"
Repository = "https://github.com/NandhaKishorM/rl-sales-augment"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rl_sales_augment = ["py.typed"]        # models come from GitHub Releases, not the wheel
